# FactoryCloudRunner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.local.yml  pyproject.toml
docker/: Dockerfile  Dockerfile.bootstrap
docs/: runpod.md
runner/: __init__.py  config.py  main.py  nextcloud.py  runpod.py  status.py  training.py
scripts/: bootstrap-ghcr.ps1  build-local.ps1  run-local.ps1
tests/: container-smoke.ps1  test_batch.py  test_config.py  test_runpod.py  test_training.py
