[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-cloud-runner"
version = "0.1.0"
description = "Sealed Nextcloud batch runner for LlamaFactory"
requires-python = ">=3.11"
dependencies = ["PyYAML==6.0.3"]

[project.scripts]
factory-cloud-runner = "runner.main:main"

[tool.setuptools.packages.find]
include = ["runner*"]
